# ConvoIntel

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: __init__.py
backend/app/: __init__.py  config.py  logging_config.py  main.py
backend/app/api/: router.py
backend/app/core/: __init__.py  exceptions.py  paths.py
backend/app/models/: __init__.py  calendar_recommendation.py  cleanup.py  google_calendar_sync.py  intelligence.py  meeting.py  normalization.py  temporal.py  transcription.py
backend/tests/: conftest.py  test_audio_intake.py  test_audio_normalization.py  test_calendar_recommendation_policy.py  test_calendar_recommendation_service.py  test_config.py  test_decision_intelligence_service.py  test_google_calendar_auth.py  test_google_calendar_gateway.py  test_google_calendar_payload.py  test_google_calendar_sync_service.py  test_health.py  test_openai_cleanup_provider.py  test_openai_intelligence_provider.py  test_openai_temporal_provider.py  test_openai_transcription_provider.py  test_temporal_intelligence_service.py  test_temporal_normalization.py  test_transcript_cleanup_service.py  test_transcription_service.py
docs/: phase-01-backend-foundation.md  phase-02-audio-intake.md  phase-03-audio-normalization.md  phase-04-diarized-transcription.md  phase-05-transcript-cleanup.md  phase-06-general-decision-intelligence.md  phase-07-temporal-intelligence.md  phase-08-calendar-recommendations.md  phase-09-google-calendar-sync.md
legacy_reference/: README.md  manifest.json  reuse-matrix.md
scripts/: google_calendar_auth.py
(+66 files in other folders)
